--- a/src/index.css
+++ b/src/index.css
@@ -192,9 +192,9 @@
 
 .switch{
   display: flex;
-  justify-content: right;
+  
   cursor: pointer;
-  align-items: right;
+  
   height: 10px;
   width: 10vw;
 
@@ -246,15 +246,81 @@
   align-items: center;
   justify-content: center;
   border-radius: 4rem;
+  margin-top: 10px;
 }
 
+.tech {
+  height: 30px;
+  text-align: left;
+  font-style: normal;
+  font-weight: bolder;
+  margin-top: 20px;
+}
+.react {
+  height: 30px;
+  text-align: left;
+  font-style: normal;
+  font-weight: bolder;
+  margin-top: 20px;
+  color:rgba(33, 94, 0, 0.71);
+}
 
+.html {
+  height: 30px;
+  text-align: left;
+  font-style: normal;
+  font-weight: bolder;
+  margin-top: 20px;
+  color: chocolate;
+}
+
+.css{
+  height: 30px;
+  text-align: left;
+  font-style: normal;
+  font-weight: bolder;
+  margin-top: 20px;
+  color: #579bf5;
+}
+
+.js{
+  height: 30px;
+  text-align: left;
+  font-style: normal;
+  font-weight: bolder;
+  margin-top: 20px;
+  color: gold;
+}
+
+.vue{
+  height: 30px;
+  text-align: left;
+  font-style: normal;
+  font-weight: bolder;
+  margin-top: 20px;
+  color: lightseagreen;
+}
+#light .tech{
+  color: rgb(0, 15, 128);
+} 
+#dark .tech{
+  color: rgba(195, 92, 218, 0.79);
+}
+
+.info {
+  text-align: center;
+  font-weight: bolder;
+  font-size: 15px;
+  font: bolder;
+  font-style: italic;
+  margin-top: 20px;
+}
 
 
 .about {
   height: 100vh;
   width: 100%;
-  text-align: center;
+  text-align: left;
   margin-top: 30px;
   margin-bottom: 10px;
   font-style: italic;
@@ -263,10 +329,10 @@
 
 #light .about {
   
-  color: rgba(15, 35, 252, 0.523);
+  color: rgba(33, 94, 0, 0.71);
 }
 #dark .about{
-  color: rgb(255, 143, 143);
+  color: rgb(255, 255, 255);
 }
 
 .about h2{
@@ -280,7 +346,7 @@
   color: rgb(0, 15, 128);
 } 
 #dark .about h2{
-  color: rgb(255, 255, 255);
+  color: rgba(213, 186, 168, 0.79);
 }
 
 .about b {
@@ -310,7 +376,7 @@
   color: rgba(3, 63, 184, 0.523);
 }
 #dark .contacts {
-  color: rgb(255, 255, 255);
+  color: rgba(213, 186, 168, 0.79);
 }
 
 .github {
