--- a/src/index.css
+++ b/src/index.css
@@ -238,7 +238,7 @@
   color: rgba(28, 78, 1, 0.837);
 }
 #dark .home h1{
-  color: rgba(213, 186, 168, 0.79);
+  color: rgb(255, 206, 173);
 }
 .imageme {
   height: 200px;
