--- a/src/index.css
+++ b/src/index.css
@@ -130,7 +130,7 @@
     padding: 20px;
     font-weight: bold;
     background-color: rgb(255, 255, 255);
-    height: 70vh;
+    height: 100vh;
     width: 50%;
     box-shadow: inset;
   }
@@ -208,7 +208,7 @@
 }
 
 .home{
-  height: 100vh;
+  height: 70vh;
   width: 100%;
   margin-bottom: 50px;
   text-align: center;
@@ -233,6 +233,7 @@
   font-size: 25px;
   font: bolder;
   font-style: italic;
+  margin-top: 20px;
 }
 #light .home h1 {
   color: rgba(28, 78, 1, 0.837);
@@ -246,7 +247,7 @@
   align-items: center;
   justify-content: center;
   border-radius: 4rem;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 .tech {
@@ -261,7 +262,7 @@
   text-align: left;
   font-style: normal;
   font-weight: bolder;
-  margin-top: 20px;
+  margin-top: 30px;
   color:rgba(33, 94, 0, 0.71);
 }
 
@@ -270,7 +271,7 @@
   text-align: left;
   font-style: normal;
   font-weight: bolder;
-  margin-top: 20px;
+  margin-top: 30px;
   color: chocolate;
 }
 
@@ -279,7 +280,7 @@
   text-align: left;
   font-style: normal;
   font-weight: bolder;
-  margin-top: 20px;
+  margin-top:30px;
   color: #579bf5;
 }
 
@@ -288,7 +289,7 @@
   text-align: left;
   font-style: normal;
   font-weight: bolder;
-  margin-top: 20px;
+  margin-top: 30px;
   color: gold;
 }
 
@@ -297,7 +298,7 @@
   text-align: left;
   font-style: normal;
   font-weight: bolder;
-  margin-top: 20px;
+  margin-top: 30px;
   color: lightseagreen;
 }
 
@@ -308,7 +309,7 @@
   font-size: 15px;
   font: bolder;
   font-style: italic;
-  margin-top: 20px;
+  margin-top: 30px;
 }
 
 #light .info {
@@ -324,10 +325,12 @@
   height: 100vh;
   width: 100%;
   text-align: left;
-  margin-top: 30px;
+  margin-top: 15px;
   margin-bottom: 10px;
   font-style: italic;
   font-size: medium;
+  line-height: 25px;
+  
 }
 
 #light .about {
