--- a/src/index.css
+++ b/src/index.css
@@ -224,11 +224,12 @@
 
 .switch{
   display: flex;
-  
+  position: relative;
   cursor: pointer;
-  
-  height: 10px;
-  width: 10vw;
+  margin-left: 600px;
+  height: 5px;
+  width: 5vw;
+  color: black;
 
 }
 
@@ -291,11 +292,10 @@
 }
 .react {
   height: 30px;
-
   font-style: normal;
   font-weight: bolder;
   margin-top: 30px;
-
+  text-align: center;
   color:rgba(33, 94, 0, 0.71);
 }
 
@@ -305,33 +305,34 @@
   font-weight: bolder;
   margin-top: 30px;
   color: chocolate;
+  text-align: center;
 }
 
 .css{
   height: 30px;
- 
   font-style: normal;
   font-weight: bolder;
   margin-top:30px;
   color: #579bf5;
+  text-align: center;
 }
 
 .js{
   height: 30px;
- 
   font-style: normal;
   font-weight: bolder;
   margin-top: 30px;
   color: gold;
+  text-align: center;
 }
 
 .vue{
   height: 30px;
-
   font-style: normal;
   font-weight: bolder;
   margin-top: 30px;
   color: lightseagreen;
+  text-align: center;
 }
 
 
