--- a/src/index.css
+++ b/src/index.css
@@ -119,21 +119,20 @@
     padding: 20px;
     font-weight: bold;
     background-color: rgb(192, 13, 13);
-    height: 60vh;
+    height: 40vh;
     width: 100%;
   }
 
   body .content {
     max-width: 600px;
-    margin: 40px auto;
-    margin-bottom: -120px;
-    margin-top: 50px;
+
     padding: 20px;
     font-weight: bold;
     background-color: rgb(255, 255, 255);
-    height: 100vh;
+    height: 80vh;
     width: 50%;
     box-shadow: inset;
+    justify-content: center;
   }
 
   #light .content{
@@ -496,7 +495,12 @@
 
 @media only screen and (max-width: 400px) {
   .navbar{
-    width: 30%;
+    width: 40%;
     height: 2%;
+  }
+
+  .switch{
+    width: 0.2%;
+    height: 0.2%;
   }
 }
