--- a/src/index.css
+++ b/src/index.css
@@ -135,6 +135,7 @@
     width: 50%;
     box-shadow: inset;
     justify-content: center;
+    position: relative;
   }
 
   #light .content{
@@ -148,6 +149,7 @@
   .portfolio-preview {
     padding: 10px 16px;
     margin: 20px o;
+    position: relative;
 
   }
 
@@ -301,7 +303,7 @@
   align-items: center;
   margin-left: 0px;
   justify-content: center;
-  position: relative;
+ 
 
 }
 .react {
@@ -414,17 +416,32 @@
   color: rgb(255, 206, 173);
 }
 
-.about b {
-  text-align: center;
+.about-b {
+  text-align: left;
+  margin-bottom: 0%;
 }
 
-#light .about b {
+#light .about-b {
   color: rgb(0, 40, 119);
 }
-#dark .about b {
+#dark .about-b {
   color: rgb(255, 255, 255);
 }
 
+.about-b p{
+  text-align: left;
+  margin-bottom: 0%;
+}
+.resume {
+  text-align: center;
+  font-style: italic;
+  font-size: larger;
+  margin-top: 20px;
+  margin-bottom: 0px;
+  justify-content: center;
+  background-color:  rgb(255, 206, 173);
+  
+}
 
 .contacts {
   height: 30px;
