--- a/src/index.css
+++ b/src/index.css
@@ -230,10 +230,11 @@
   display: flex;
   position: relative;
   cursor: pointer;
-  margin-left: 400px;
+  margin-left: 350px;
   height: 3px;
   width: 4vw;
   color: black;
+
 
 }
 
@@ -543,5 +544,12 @@
   .switch{
     width: 0.05%;
     height: 0.2%;
+    margin-left: 300px;
+  }
+
+  .navbar h1{
+    font-size: 0.5rem;
+    width: 40%;
+    height: 0.7%;
   }
 }
