--- a/src/index.css
+++ b/src/index.css
@@ -300,6 +300,7 @@
 }
 
 .skills {
+  height: 60px;
   display: flex;
   align-items: center;
   margin-left: 0px;
@@ -308,7 +309,7 @@
 
 }
 .react {
-  height: 30px;
+  height: 40px;
   font-style: normal;
   font-weight: bolder;
   margin-top: 30px;
@@ -317,7 +318,7 @@
 }
 
 .html {
-  height: 30px;
+  height: 40px;
   font-style: normal;
   font-weight: bolder;
   margin-top: 30px;
@@ -326,7 +327,7 @@
 }
 
 .css{
-  height: 30px;
+  height: 40px;
   font-style: normal;
   font-weight: bolder;
   margin-top:30px;
@@ -335,7 +336,7 @@
 }
 
 .js{
-  height: 30px;
+  height: 40px;
   font-style: normal;
   font-weight: bolder;
   margin-top: 30px;
@@ -344,7 +345,7 @@
 }
 
 .vue{
-  height: 30px;
+  height: 40px;
   font-style: normal;
   font-weight: bolder;
   margin-top: 30px;
@@ -550,6 +551,13 @@
   .navbar h1{
   
     width: 40%;
-    height: 0.7%;
+    height: 1%;
+   
+  }
+
+  .navbar .links {
+    width: 60%;
+    height: 1%;
+    margin-left: 0px;
   }
 }
