--- a/src/index.css
+++ b/src/index.css
@@ -538,7 +538,7 @@
 
 @media only screen and (max-width: 400px) {
   .navbar{
-    width: 60%;
+    width: 90%;
  
   }
 
@@ -551,12 +551,13 @@
   .navbar h1{
   
     width: 30%;
+    margin-left: 0px;
 
    
   }
 
   .navbar .links {
-    width: 70%;
+    width: 90%;
     margin-left: 0px;
   }
 }
