--- a/src/index.css
+++ b/src/index.css
@@ -442,6 +442,10 @@
   margin-bottom: 0px;
   justify-content: center;
   background-color:  rgb(255, 206, 173);
+  border-radius: 4rem;
+  
+
+  
   
 }
 
